--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -9,7 +9,7 @@
 <ion-content> 
   <ion-grid> 
     <ion-row> 
-      <ion-col style="margin: 2px" size="6" *ngFor="let photo of photoService.photos"> 
+      <ion-col style="margin-bottom: 4px" size="6" *ngFor="let photo of photoService.photos"> 
         <img style="transform: rotate(90deg)" [src]="photo.data" /> 
       </ion-col> 
     </ion-row> 
