--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -7,6 +7,11 @@
   </feature>
 
 
+  <feature name="BluetoothLePlugin">
+    <param name="android-package" value="com.randdusing.bluetoothle.BluetoothLePlugin"/>
+  </feature>
+
+
   <feature name="Camera">
     <param name="android-package" value="org.apache.cordova.camera.CameraLauncher"/>
   </feature>
